crates/es-fluent-derive/tests/ui/fluent_choice_invalid_rename_all.stderr
error: invalid #[fluent_choice(rename_all = ...)] value `not_a_style`: Matching variant not found; supported values are: snake_case, PascalCase, camelCase, kebab-case, SCREAMING_SNAKE_CASE, SCREAMING-KEBAB-CASE, Title Case, Train-Case, lowercase, UPPERCASE
 --> tests/ui/fluent_choice_invalid_rename_all.rs:4:17
  |
4 | #[fluent_choice(rename_all = "not_a_style")]
  |                 ^^^^^^^^^^
