crates/es-fluent-derive/tests/ui/fluent_choice_invalid_rename_all.rs
use es_fluent_derive::EsFluentChoice;

#[derive(EsFluentChoice)]
#[fluent_choice(rename_all = "not_a_style")]
pub enum Severity {
    Low,
    High,
}

fn main() {}
